// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rum client dashboard queries fetches client metrics 1`] = `
Object {
  "body": Object {
    "aggs": Object {
      "backEnd": Object {
        "avg": Object {
          "field": "transaction.marks.agent.timeToFirstByte",
          "missing": 0,
        },
      },
      "domInteractive": Object {
        "avg": Object {
          "field": "transaction.marks.agent.domInteractive",
          "missing": 0,
        },
      },
      "pageViews": Object {
        "value_count": Object {
          "field": "transaction.type",
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "processor.event": "transaction",
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "exists": Object {
              "field": "transaction.marks.navigationTiming.fetchStart",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
      },
    },
    "size": 0,
  },
  "index": "myIndex",
}
`;

exports[`rum client dashboard queries fetches page load distribution 1`] = `
Object {
  "body": Object {
    "aggs": Object {
      "durationMinMax": Object {
        "min": Object {
          "field": "transaction.duration.us",
          "missing": 0,
        },
      },
      "durationPercentiles": Object {
        "percentiles": Object {
          "field": "transaction.duration.us",
          "percents": Array [
            50,
            75,
            90,
            95,
            99,
          ],
          "script": Object {
            "lang": "painless",
            "params": Object {
              "timeUnit": 1000,
            },
            "source": "doc['transaction.duration.us'].value / params.timeUnit",
          },
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "processor.event": "transaction",
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "exists": Object {
              "field": "transaction.marks.navigationTiming.fetchStart",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
      },
    },
    "size": 0,
  },
  "index": "myIndex",
}
`;

exports[`rum client dashboard queries fetches page view trends 1`] = `
Object {
  "body": Object {
    "aggs": Object {
      "pageViews": Object {
        "aggs": Object {
          "trans_count": Object {
            "value_count": Object {
              "field": "transaction.type",
            },
          },
        },
        "auto_date_histogram": Object {
          "buckets": 50,
          "field": "@timestamp",
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "processor.event": "transaction",
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "exists": Object {
              "field": "transaction.marks.navigationTiming.fetchStart",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
      },
    },
    "size": 0,
  },
  "index": "myIndex",
}
`;
